test262: Should be a SyntaxError for duplicate parameter names in function with default parameters https://bugs.webkit.org/show_bug.cgi?id=162013

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-09-15
Reviewed by Saam Barati.

JSTests:

* stress/es6-default-parameters.js:
* test262.yaml:

Source/JavaScriptCore:

https://tc39.github.io/ecma262/#sec-function-definitions-static-semantics-early-errors
It is a Syntax Error if IsSimpleParameterList of FormalParameterList is
false and BoundNames of FormalParameterList contains any duplicate elements.

Non-simple parameter lists include rest parameters, destructuring,
and default parameters.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseFormalParameters):
Previously, we were not failing if there were default parameters
early in the parameter list that were not yet identified as duplicates
and simple parameters later were duplicates. Now, we fail if there
are default parameters anywhere in the parameter list with a duplicate.

Canonical link: https://commits.webkit.org/180145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205969 268f45cc-cd09-0410-ab3c-d52691b4dbfc